# toweroffantasy.api

./: .discloudignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  data.py  discloud.config  docker-compose.yaml  log-config.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  test_data.py
.github/workflows/: deploy.yml  main.yml  python-app.yml  test-data.yml
api/: __init__.py  config.py  enums.py  utils.py
api/core/exceptions/: __init__.py  exception_class.py  model.py
api/core/response/: __init__.py  json_response.py
api/core/routes/: food.py  graphql.py  image.py  item.py  matrices.py  names.py  outfits.py  raritys.py  relics.py  simulacra.py  simulacra_v2.py  weapons.py
api/database/: DT_WeaponTupo.json  avatar.json  frames.json  shop.json  stats.json  weapontupo.json
api/database/de/: achievements.json  advancement.json  currency.json  currency2.json  food.json  gear.json  imitations.json  items.json  matrices.json  matrices_suit.json  outfits.json  relics.json  relics_advancement.json  simulacra.json  weapons.json  weaponskill.json
api/database/en/: achievements.json  advancement.json  currency2.json  food.json  gear.json  imitations.json  items.json  matrices.json  matrices_suit.json  outfits.json  relics.json  relics_advancement.json  simulacra.json  weapons.json  weaponskill.json
api/database/es/: achievements.json  advancement.json  currency2.json  food.json  gear.json  guidebook.json  imitations.json  items.json  matrices.json  matrices_suit.json  outfits.json  relics.json  relics_advancement.json  simulacra.json  weapons.json  weaponskill.json
api/database/fr/: achievements.json  advancement.json  avatar.json  currency2.json  food.json  gear.json  imitations.json  items.json  matrices.json  matrices_suit.json  relics.json  relics_advancement.json  simulacra.json  weapons.json  weaponskill.json
api/database/id/: achievements.json  advancement.json  currency.json  currency2.json  food.json  gear.json  imitations.json  items.json  matrices.json  matrices_suit.json  outfits.json  relics.json  relics_advancement.json  simulacra.json  weapons.json  weaponskill.json
api/database/ja/: achievements.json  advancement.json  currency2.json  food.json  gear.json  imitations.json  items.json  matrices.json  matrices_suit.json  outfits.json  relics.json  relics_advancement.json  simulacra.json  weapons.json  weaponskill.json
api/database/pt/: achievements.json  advancement.json  currency2.json  food.json  gear.json  imitations.json  items.json  matrices.json  matrices_suit.json  outfits.json  relics.json  relics_advancement.json  simulacra.json  weapons.json  weaponskill.json
api/database/ru/: achievements.json  advancement.json  currency2.json  food.json  gear.json  imitations.json  items.json  matrices.json  matrices_suit.json  relics.json  relics_advancement.json  simulacra.json  weapons.json  (+1 more)
api/entitys/: __init__.py  langs.py  matrices.py  relics.py  simulacra.py  simulacra_v2.py
api/response/: __init__.py  json_response.py
api/routes/: achievements.py  extras.py  food.py  gear.py  graphql.py  guidebook.py  home.py  image.py  item.py  matrices.py  mounts.py  names.py  outfits.py  raritys.py  relics.py  servants.py  simulacra.py  simulacra_v2.py  weapons.py
prisma/schema/: account.prisma  banner.prisma  data_relation.prisma  enums.prisma  preset.prisma  schema.prisma  server.prisma  user.prisma
scripts/: banners.py  create.sh  matrices.py  relations.py  send_json_to_mongo.py  simulacra.py  sync_with_prod.py  weapons.py
src/: VERSION.txt  __init__.py  _lifespan.py  _settings.py  _types.py  _utils.py  _version.py  main.py
src/common/: base_model.py  dtos.py  json_repository.py  mongo_repository.py  redis.py  translator.py
src/config/: __init__.py  include.py  sorter.py
src/context/: database_conn.py  mongo_conn.py  prisma_conn.py  redis_conn.py
src/core/: crypt.py  docs.py  router.py
src/database/: gifts.json  imitation_links.json  matrices.json  mounts.json  simulacra.json  weapons.json
src/decorators/: filter.py
src/enums/: __init__.py  simulacra.py  weapons.py
src/exceptions/: bad_request.py  base.py  conflict.py  internal_error.py  not_found.py  unauthorized.py
src/logging/: __init__.py
src/middlewares/: timeit.py
src/modules/: _paginator.py  _utils.py  router.py
src/security/: _base.py  auth.py  role.py
src/utils/: __init__.py  __models.py  banners.py  simulacra.py  weapon.py
src/validators/: regex.py
(+2650 files in other folders)
